# Trading-Agent-with-MCPs

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  accounts_client.py  app.py  check_accounts.py  currency_client.py  currency_rates.py  currency_server.py  database.py  mcp-servers-readme.md  mcp_params.py  pyproject.toml  templates.py  tracers.py  traders.py  trading_floor.py  util.py
